--- a/DciSampleWithStrategyPattern/DciSampleWithStrategyPattern.csproj
+++ b/DciSampleWithStrategyPattern/DciSampleWithStrategyPattern.csproj
@@ -46,10 +46,10 @@
     <Compile Include="Context\AttackingContext.cs" />
     <Compile Include="Data\Player.cs" />
     <Compile Include="Dice.cs" />
-    <Compile Include="Interactions\Roles\HasRoles.cs" />
-    <Compile Include="Interactions\Traits\AttackerTraits.cs" />
+    <Compile Include="Interactions\Roles\HasTraits.cs" />
+    <Compile Include="Interactions\Traits\AttackerTrait.cs" />
     <Compile Include="Interactions\Roles\PlayerRole.cs" />
-    <Compile Include="Interactions\Traits\DefenderTraits.cs" />
+    <Compile Include="Interactions\Traits\DefenderTrait.cs" />
     <Compile Include="Interactions\Traits\Trait.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Program.cs" />
